# libsolunet

./: CMakeLists.txt  README.md
include/: solunet.h
include/solunet/: ISocket.h
src/: CNetHandler.h  CNetHandler_linux.cpp  CNetHandler_openssl.cpp  solunet.cpp
